[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/egoventure/nodes/four_side_room.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/man/man23c.jpg" type="Texture2D" id=2]
[ext_resource path="res://images/man/man23d.jpg" type="Texture2D" id=3]
[ext_resource path="res://images/man/man23a.jpg" type="Texture2D" id=4]
[ext_resource path="res://images/man/man23b.jpg" type="Texture2D" id=5]
[ext_resource path="res://addons/egoventure/nodes/hotspots/hotspot.gd" type="Script" id=6]
[ext_resource path="res://scenes/man/man23.gd" type="Script" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Node3D" parent="." instance=ExtResource( 1 )]
position = Vector2( 25.1985, 0 )
front_texture = ExtResource( 4 )
right_texture = ExtResource( 5 )
back_texture = ExtResource( 2 )
left_texture = ExtResource( 3 )

[node name="Hotspot" type="TextureButton" parent="."]
offset_left = 432.0
offset_top = 2304.0
offset_right = 944.0
offset_bottom = 2856.0
mouse_default_cursor_shape = 13
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot2" type="TextureButton" parent="."]
offset_left = 1558.0
offset_top = -1285.0
offset_right = 2261.0
offset_bottom = -61.0
mouse_default_cursor_shape = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
target_scene = "res://scenes/man/man24.tscn"

[node name="Hotspot3" type="TextureButton" parent="."]
offset_left = -1592.87
offset_top = 854.227
offset_right = -1340.87
offset_bottom = 1179.23
mouse_default_cursor_shape = 13
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot4" type="TextureButton" parent="."]
offset_left = -1131.66
offset_top = 869.346
offset_right = -869.663
offset_bottom = 1176.35
mouse_default_cursor_shape = 13
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[connection signal="activate" from="Hotspot" to="." method="_on_Hotspot_activate"]
[connection signal="activate" from="Hotspot3" to="." method="_on_Hotspot3_activate"]
[connection signal="activate" from="Hotspot4" to="." method="_on_Hotspot4_activate"]
